--- a/package.json
+++ b/package.json
@@ -90,20 +90,26 @@
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.1",
-    "@tiptap/core": "^2.24.3",
-    "@tiptap/extension-font-family": "^3.4.1",
-    "@tiptap/extension-highlight": "^3.3.0",
-    "@tiptap/extension-image": "^3.4.3",
-    "@tiptap/extension-link": "^3.4.3",
-    "@tiptap/extension-table": "^3.3.0",
-    "@tiptap/extension-task-item": "^3.3.0",
-    "@tiptap/extension-task-list": "^3.3.0",
-    "@tiptap/extension-text-align": "^3.3.0",
-    "@tiptap/extension-text-style": "^3.3.0",
-    "@tiptap/extension-underline": "^3.4.1",
-    "@tiptap/pm": "^3.4.3",
-    "@tiptap/react": "^2.11.2",
-    "@tiptap/starter-kit": "^2.24.3",
+    "@tiptap/core": "^2.26.3",
+    "@tiptap/extension-collaboration": "^2.26.3",
+    "@tiptap/extension-collaboration-cursor": "^2.26.2",
+    "@tiptap/extension-color": "^2.26.3",
+    "@tiptap/extension-font-family": "^2.26.3",
+    "@tiptap/extension-highlight": "^2.26.3",
+    "@tiptap/extension-image": "^2.26.3",
+    "@tiptap/extension-link": "^2.26.3",
+    "@tiptap/extension-table": "^2.26.3",
+    "@tiptap/extension-table-cell": "^2.26.3",
+    "@tiptap/extension-table-header": "^2.26.3",
+    "@tiptap/extension-table-row": "^2.26.3",
+    "@tiptap/extension-task-item": "^2.26.3",
+    "@tiptap/extension-task-list": "^2.26.3",
+    "@tiptap/extension-text-align": "^2.26.3",
+    "@tiptap/extension-text-style": "^2.26.3",
+    "@tiptap/extension-underline": "^2.26.3",
+    "@tiptap/pm": "^2.26.3",
+    "@tiptap/react": "^2.26.3",
+    "@tiptap/starter-kit": "^2.26.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
@@ -121,6 +127,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.3.0",
+    "y-prosemirror": "^1.3.7",
+    "y-protocols": "^1.0.6",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
